# localvoicesync

./: .gitattributes  .gitignore  LICENSE  README.md  pubspec.yaml  run.sh
ffigen_config/: hotkey_config.yaml  vad_config.yaml  whisper_config.yaml
lib/: main.dart
lib/core/audio/: audio_capture_service.dart
lib/core/hotkey/: hotkey_service.dart
lib/core/llm/: ollama_client.dart
lib/core/text_injection/: text_injection_service.dart
lib/core/vad/: vad_engine.dart
lib/core/whisper/: whisper_engine.dart
lib/features/history/: history_entry.dart  history_manager.dart  history_page.dart
lib/features/recording/: record_page.dart  voice_sync_manager.dart
lib/features/settings/: settings_page.dart  settings_service.dart
lib/native/: vad_bindings.dart
lib/native/hotkey/: hotkey_bindings.dart
lib/native/whisper/: whisper_bindings.dart
lib/services/: state_manager.dart
lib/ui/pages/: app_shell.dart
lib/ui/theme/: app_theme.dart
lib/ui/widgets/: app_clickable.dart  interim_results_window.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  my_application.cc
native/hotkey/: CMakeLists.txt  hotkey_wrapper.c  hotkey_wrapper.h
native/vad/: CMakeLists.txt  vad_wrapper.cpp  vad_wrapper.h
native/whisper/: CMakeLists.txt  rename_whisper.h  whisper_wrapper.cpp  whisper_wrapper.h
native/whisper/whisper.cpp/ggml/src/ggml-vulkan/: abs.comp.cpp  acc.comp.cpp  add.comp.cpp  argsort.comp.cpp  argsort_large.comp.cpp  ceil.comp.cpp  clamp.comp.cpp  concat.comp.cpp  contig_copy.comp.cpp  conv2d_mm.comp.cpp  copy.comp.cpp  copy_from_quant.comp.cpp  copy_to_quant.comp.cpp  copy_transpose.comp.cpp  cos.comp.cpp  cumsum.comp.cpp  dequant_iq1_m.comp.cpp  dequant_iq3_s.comp.cpp  dequant_iq4_xs.comp.cpp  dequant_q2_k.comp.cpp  dequant_q3_k.comp.cpp  dequant_q6_k.comp.cpp  diag.comp.cpp  div.comp.cpp  exp.comp.cpp  fill.comp.cpp  flash_attn.comp.cpp  flash_attn_cm1.comp.cpp  flash_attn_split_k_reduce.comp.cpp  floor.comp.cpp  geglu.comp.cpp  geglu_erf.comp.cpp  geglu_quick.comp.cpp  gelu.comp.cpp  gelu_erf.comp.cpp  gelu_quick.comp.cpp  get_rows.comp.cpp  get_rows_quant.comp.cpp  ggml-vulkan-shaders.hpp  hardsigmoid.comp.cpp  (+55 more)
test/: widget_test.dart
